zorch/csrc/tensor.h

typedef struct {
  float *data;
  int *strides;
  int *shape;
  int ndim;
  int size;
  char *device;
} Tensor;
/* 创建张量 */
Tensor *create_tensor(float *data, int *shape, int ndim, char *device);
/* 删除张量 */
void delete_tensor(Tensor *tensor);
/* 删除步长 */
void delete_strides(Tensor *tensor);
/* 删除形状 */
void delete_shape(Tensor *tensor);
/* 删除设备 */
void delete_device(Tensor *tensor);
/* 使用索引获取张量中的元素 */
float get_item(Tensor *tensor, int *indices);
Tensor *ones_like_tensor(Tensor *tensor);
Tensor *zeros_like_tensor(Tensor *tensor);
/* 改变张量的形状 */
Tensor *reshape_tensor(Tensor *tensor, int *new_shape, int new_ndim);